--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,75 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body{
+  background-color: #1D2125;
+
+}
+.container{
+  font-family: 'Lato';
+  text-align: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+
+
+h1,p {
+  color: white;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+select {
+  padding: 8px;
+  background-color: #141414;
+  color: white;
+  border: 1px solid #2E5596;
+  border-radius: 4px;
+  margin-bottom: 10px;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+select:hover {
+  background-color: #2E5596;
+}
+
+select:focus {
+  outline: none;
+}
+
+
+table {
+
+  background-color: #141414;
+  color:white;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.head{
+  color: #647696;
+  text-align: center;
+}
+
+th, td {
+  padding: 12px;
+  text-align: right;
+}
+
+button {
+  padding: 6px 12px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+.positive {
+  color: #0FAEA3;
+}
+
+.negative {
+  color: #E77054;
 }
