--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,12 +11,9 @@ body{
   text-align: center;
 }
 
-
-
 h1,p {
   color: white;
 }
-
 
 select {
   padding: 8px;
@@ -73,4 +70,9 @@ button:hover {
 
 .negative {
   color: #E77054;
+}
+
+.signout{
+  float: right;
+  background-color: #E77054;
 }
